--- a/leadMangement/pom.xml
+++ b/leadMangement/pom.xml
@@ -90,6 +90,11 @@
 			<version>4.12</version> <!-- Adjust the version as needed -->
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
